# azure-orbital-space-sdk-data-generators

./: .gitignore
.devcontainer/: devcontainer.json
.devcontainer/geospatial-images-datagenerator/: devcontainer.json
.devcontainer/geospatial-images-vth-plugin/: devcontainer.json
.devcontainer/planetary-computer-datagenerator/: devcontainer.json
.devcontainer/planetary-computer-vth-plugin/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: geospatial-images-generator-build.yaml  geospatial-images-plugin-build.yaml  geospatial-images-plugin-test.yaml  planetary-computer-generator-build.yaml  planetary-computer-plugin-build.yaml  planetary-computer-plugin-test.yaml
datagenerators/geospatial-images/: README.md
datagenerators/geospatial-images/datagenerator/: README.md  devcontainer_postStart.sh  pyproject.toml
datagenerators/geospatial-images/datagenerator/Dockerfiles/: Dockerfile
datagenerators/geospatial-images/datagenerator/config/: config.ini
datagenerators/geospatial-images/datagenerator/data/images/: LC08_L1TP_046027_20220728_20220728_02_RT_refl.json  LC08_L1TP_047027_20220719_20220725_02_T1_refl.json
datagenerators/geospatial-images/datagenerator/k3s/: datagenerator-geospatial-images.yaml
datagenerators/geospatial-images/datagenerator/src/datagenerator_geospatial_images/: config.py  main.py
datagenerators/geospatial-images/plugin/: README.md  geospatial-images-vth-plugin.sln
datagenerators/geospatial-images/plugin/debugPayloadApp/: Usings.cs  debugPayloadApp.csproj
datagenerators/geospatial-images/plugin/src/: Usings.cs  geospatial-images-vth-plugin.csproj  geospatial-images-vth-plugin.json.spacefx_plugin  plugin.cs
datagenerators/planetary-computer/: README.md
datagenerators/planetary-computer/datagenerator/: README.md  devcontainer_postStart.sh  pyproject.toml
datagenerators/planetary-computer/datagenerator/Dockerfiles/: Dockerfile
datagenerators/planetary-computer/datagenerator/k3s/: datagenerator-planetary-computer.yaml  tool-planetary-computer-geotiff.yaml
datagenerators/planetary-computer/datagenerator/src/datagenerator_planetary_computer/: main.py
datagenerators/planetary-computer/datagenerator/src/tool_planetary_computer_geotiff/: main.py
datagenerators/planetary-computer/datagenerator/test/: test_main.py
datagenerators/planetary-computer/plugin/: README.md  output.json  planetary-computer-vth-plugin.sln
(+18 files in other folders)
