[tool.poetry]
name = "datagenerator-geospatial-images"
description = "..."
authors = [ "Azure Space SDK" ]
version = "0.10.0"
readme = "README.md"
packages = [
    { include = "datagenerator_geospatial_images", from = "src" },
]

[tool.poetry.scripts]
datagenerator-geospatial-images = 'datagenerator_geospatial_images.main:main'

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
rasterio = "1.3.3"
waitress = "^2.1.2"
pyproj = "^3.5.0"
grpcio-tools = "^1.26.0"
grpcio = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]