[tool.poetry]
name = "datagenerator-planetary-computer"
description = "..."
authors = [ "Azure Space SDK" ]
version = "0.10.0"
readme = "README.md"
packages = [
    { include = "datagenerator_planetary_computer", from = "src" },
]

[tool.poetry.scripts]
datagenerator-planetary-computer = 'datagenerator_planetary_computer.main:main'

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
planetary-computer = "^1.0.0"
pystac-client = "^0.6.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]